[metadata]
name=selenium_with_pytest
version=0.0.1
author=venkat
author_email=venkat@gmail.com
url=https://github.com/Venkat0273/PyTest
description=Selenium Hybrid test automation framework
keywords=selenium, pytest
classifiers=
    Programming Language :: Python :: 3

[options]
zip_safe=False
include_package_data=True
packages=find:
package_dir=
    = src
python_requires = >=3.6
[options.packages.find]
where=src
[options.package_data]
* = *.*